Bug 167996 - KNode "wrap word at column X" doesn't work
Summary: KNode "wrap word at column X" doesn't work
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 167894 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-08-01 15:40 UTC by Davide Ferrari
Modified: 2008-12-13 13:49 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Davide Ferrari 2008-08-01 15:40:43 UTC
Version:            (using KDE 4.1.0)
Installed from:    Ubuntu Packages

As subject says, althoug KNode is wrapping correctly when displaying the text you're writing, when it comes to sending the article to the news server, it just sends one really long line.
You have to give "new lines" manually to fix the output sent to the newsserver
Comment 1 Martin Schlander 2008-08-13 10:50:09 UTC
I have the same problem with openSUSE 4.1.0 packages.

I'm using the default setting of wrap at column 76. In the editor the lines are wrapped and looking good. When I click "Send" there's a warning that the post contains lines longer than 80 characters, which indeed is the case, as the wrapping in the editor, doesn't apply to what is actually sent.
Comment 2 Mihai RUSU 2008-09-08 15:32:50 UTC
I have the exact same problems, the message looks fine in the composer but when it is to be sent it warns about too long lines and I have to wrap the message manually (and if I miss some line I see it when I get the message from the server without being wrapped so the warning was correct).
Comment 3 Mihai RUSU 2008-09-08 15:34:18 UTC
I forgot to mention, I am using gentoo kdesvn-portage overlay (but with 4.1.1 kde not with trunk) so the problem appears te be platform independent.
Comment 4 Rex Dieter 2008-09-08 15:36:46 UTC
I'm seeing this too, kdepim-4.1.0
Comment 5 Darin McBride 2008-11-28 19:00:49 UTC
Looks like this is the same as bug #167894
Comment 6 Olivier Trichet 2008-12-09 12:57:44 UTC
*** Bug 167894 has been marked as a duplicate of this bug. ***
Comment 7 Olivier Trichet 2008-12-11 21:49:48 UTC
SVN commit 895836 by otrichet:

Wrap correcty the text of articles being sent

BUG: 167996


 M  +3 -3      kncomposer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=895836
Comment 8 Davide Ferrari 2008-12-12 10:54:26 UTC
Thanks! Now all major regressions from KDE3 are gone (at least for me) and Knode is again 100% usable 
Comment 9 Gunter Ohrner 2008-12-13 13:49:47 UTC
Great; i just wanted to report this bug and am pleased to see it has just been fixed three days ago. :)
Now I just have to wait for the next KDE 4.1 bugfix release. (or for KDE 4.2 to be released and hit Debian...)