Wrap correcty the text of articles being sent

BUG: 167996

svn path=/trunk/KDE/kdepim/knode/; revision=895836